# Buffy

./: .env.example  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  pyproject.toml
deploy/: buffy.service
src/buffy/: __init__.py  __main__.py  config.py  formatting.py  models.py  omdb.py  plex.py  service.py  state.py  telegram.py
src/buffy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_config.py  test_formatting.py  test_service.py  test_state.py
