[project]
name = "buffy"
version = "0.1.0"
description = "Plex playback notifier for Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

